--- a/YingCaiAi/YingCaiAiWin/Views/Pages/ChatBubbleList.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/ChatBubbleList.xaml
@@ -1,12 +1,17 @@
 ﻿<UserControl x:Class="YingCaiAiWin.Views.Pages.ChatBubbleList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--<ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled"
                   CanContentScroll="True">
        
     </ScrollViewer>-->
-  
-        <StackPanel x:Name="MessagePanel"/>
-  
+
+
+    <StackPanel x:Name="MessagePanel" >
+        
+    </StackPanel>
+
+
 </UserControl>
 
