--- a/YingCaiAi/YingCaiAiWin/Views/UserControl/CustomerStatus.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/UserControl/CustomerStatus.xaml
@@ -2,12 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-             Height="150" Width="400"
+             Height="100" Width="400"
               ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
  ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
  Foreground="{DynamicResource TextFillColorPrimaryBrush}"
              >
-    <Grid  Width="380">
+    <Grid  Width="380" Height="100">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
