--- a/YingCaiAi/YingCaiAiWin/Views/login.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/login.xaml
@@ -119,7 +119,7 @@
 
                     <!-- 密码输入框 -->
                     <ui:PasswordBox Grid.Row="2" PlaceholderText="请输入密码" 
-                                    x:Name="PasswordBox"
+                                    x:Name="UserPassword"
                                     Margin="0,0,0,10"
                                     Icon="LockClosed24"
                                     >
